# esp32-raspi-camera-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
main/: CMakeLists.txt  camera.c  camera.h  main.c  network.c  network.h  network_manager.h  types.h  wifi.c  wifi.h
software_servidor/: queue.c  queue.h  servidor.c  types.h
